<resources>
    <string name="app_name">practica5_233326</string>
    <!-- Main Activity -->
    <string name="welcome_text">Welcome to the Portales!</string>
    <string name="welcome_descr">Taqueria Los Portales is a
        quick, casual restaurant</string>
    <string name="button_start">Get started!</string>
    <!-- Register Activity -->
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept the terms and conditions 
        of the Cheezery</string>
    <string name="sign_in">Sign in</string>
    <!-- Menu Activity -->
    <string name="our_menu">Our Menu</string>
    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="combinations">Combinations</string>
    <string name="tortas">Tortas</string>
    <string name="sopas">Sopas</string>
    <string name="drinks">Drinks</string>
</resources>